--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build Windows EXE
-        run: npm run dist:win
+        run: npm run dist:win -- --publish=never
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
