--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,7 +19,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build Windows EXE
-        run: npm run dist:win -- --publish=never
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: npm run dist:win
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
