--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -6,6 +6,11 @@ on:
     branches:
       - main
       - master
+    tags:
+      - v*
+
+permissions:
+  contents: write
 
 jobs:
   build-windows:
@@ -21,7 +26,7 @@ jobs:
       - name: Build Windows EXE
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npm run dist:win
+        run: npm run dist:win -- --publish=always
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
